@@ -2960,7 +2960,7 @@ elder
 	HostileReplies == "\"I knew those hippos couldn't raise anything decent!\"";
 	FriendlyReplies =
 	{
-		9,
+		10,
 		"\"So you're leaving? The stars tell me you will fight glorious battles, meet interesting people, find out suprising things and eventually die a violent death. But good luck anyway.\"",
 		"\"I remember still clearly when we first found you in the jungle. You were five and had seemingly been raised by hippos since birth.\"",
 		"\"Even though you have lived here, you are somehow different from the Tweraifians, I can sense it. Is it your aggressive and wild character or your stupidity that separates us? Or is it just that your skin is white and our black?\"",
@@ -2969,7 +2969,8 @@ elder
 		"\"For a decade I served this Decos lad as a banana grower like everyone else, but then an elephant stepped on my toe and my leg was amputated. I couldn't climb trees anymore so they made me a tourist guide.\"",
 		"\"According to old knowledge ostriches were once kings of the sky. Their divine perception, seven feet wings and almost supernatural speed were envied by men and gods alike. Then one of them discovered levitation and soon they all became lazy and eventually dropped their wings.\"",
 		"\"Previously we could use donkeys to carry the bananas. Then one day Attnamians tested a fierce magical bomb nearby. All the asses mutated horribly and started attacking us. The donkeys, I mean, not the colonists.\"",
-		"\"The government of Attnam is led by the high priest of Valpurus, the Great Frog who carries the world. When I was young, Petrus assumed this position by killing the former high priest.\"";
+		"\"The government of Attnam is led by the high priest of Valpurus, the Great Frog who carries the world. When I was young, Petrus assumed this position by killing the former high priest.\"",
+		"\"Some time ago Attnamian military alchemists managed to crossbreed the carnivorous plant and the pineapple tree. They named the result as genetrix vesana and discovered it was a powerful hunter. The colonists tried to transport it to Attnam through the underwater tunnel but never arrived in the destination.\"";
 	}
 }
 
